<resources>
    <string name="app_name">UnSolito</string>
    <string name="saludo">Bienvenidos</string>
    <string name="titulo">Un Solito</string>
    <string name="usuario">Ingrese su usuario</string>
    <string name="contra">Ingrese su contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="salir">Salir</string>
    <string name="mensajeSalida">Saliendo...</string>

    //Menu principal
    <string name="menu">Menú Principal</string>
    <string name="calculadora">Calculadora</string>
    <string name="imagenes">Imágenes</string>
    <string name="web">Web</string>
    <string name="url">Ingrese la URL</string>
    <string name="video">Video</string>
    <string name="gps">GPS</string>
    <string name="loco">Loco</string>
    <string name="presiona">Presiona Aqui</string>
    <string name="hora">Hora Actual</string>
    <string name="obtenerhora">Obtener Hora Actual</string>
    <string name="rank">Ranking. ¿Que tal te parecio nuestra app?</string>
    <string name="imgEP">Encender y Apagar una Imagen</string>
    <string name="acercade">Acerca de</string>
    <string name="regresar">Regresar</string>

</resources>