<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saludo"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/txtMUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:inputType="textPersonName"
                android:layout_margin="10dp"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/txtMContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contra"
                android:inputType="textPassword"
                android:layout_margin="10dp"
                android:importantForAutofill="no"/>

            <Button
                android:id="@+id/btnMAcceder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceder"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btnMSalir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salir"
                android:layout_margin="10dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>